{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 10,
  "lineage": "2b0cf52d-fc7b-fe53-fe45-876485d80e79",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "app-gateway",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdn_list": [],
                "fqdns": [],
                "id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/BackEndAddressPool",
                "ip_address_list": [],
                "ip_addresses": [],
                "name": "BackEndAddressPool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/httpSetting",
                "name": "httpSetting",
                "path": "/",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 1
              }
            ],
            "custom_error_configuration": [],
            "disabled_ssl_protocols": [],
            "enable_http2": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/applicationGateways/appgateway/frontendIPConfigurations/webAppPport",
                "name": "webAppPport",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/publicIPAddresses/testag-public-ip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/applicationGateways/appgateway/frontendPorts/webAppPport",
                "name": "webAppPport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/applicationGateways/appgateway/gatewayIPConfigurations/gateway-ip-config",
                "name": "gateway-ip-config",
                "subnet_id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/virtualNetworks/testag-network/subnets/testag-subnet-1"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "frontend_ip_configuration_id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/applicationGateways/appgateway/frontendIPConfigurations/webAppPport",
                "frontend_ip_configuration_name": "webAppPport",
                "frontend_port_id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/applicationGateways/appgateway/frontendPorts/webAppPport",
                "frontend_port_name": "webAppPport",
                "host_name": "",
                "id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/applicationGateways/appgateway/httpListeners/httpListener",
                "name": "httpListener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": ""
              }
            ],
            "id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/applicationGateways/appgateway",
            "identity": [],
            "location": "westeurope",
            "name": "appgateway",
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/BackEndAddressPool",
                "backend_address_pool_name": "BackEndAddressPool",
                "backend_http_settings_id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/httpSetting",
                "backend_http_settings_name": "httpSetting",
                "http_listener_id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/applicationGateways/appgateway/httpListeners/httpListener",
                "http_listener_name": "httpListener",
                "id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/applicationGateways/appgateway/requestRoutingRules/httpRoutingRule",
                "name": "httpRoutingRule",
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "applicaiton-gateway-testag",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_Small",
                "tier": "Standard"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "",
                "policy_type": ""
              }
            ],
            "tags": {},
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "dependencies": [
            "azurerm_public_ip.testag",
            "azurerm_resource_group.testag",
            "azurerm_subnet.testag-subnet-1",
            "azurerm_virtual_network.testag"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "testag-instance",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/networkSecurityGroups/testag-instance-nsg",
            "location": "westeurope",
            "name": "testag-instance-nsg",
            "resource_group_name": "applicaiton-gateway-testag",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.testag"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "testag",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "applicaiton-gateway-testag",
            "fqdn": "applicaiton-gateway-testag.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/publicIPAddresses/testag-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.95.7.133",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "testag-public-ip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "applicaiton-gateway-testag",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.testag"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AzureBastionSubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.3.0/24",
            "id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/virtualNetworks/testag-network/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "applicaiton-gateway-testag",
            "virtual_network_name": "testag-network"
          },
          "dependencies": [
            "azurerm_resource_group.testag",
            "azurerm_virtual_network.testag"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "testag-subnet-1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.0/24",
            "id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/virtualNetworks/testag-network/subnets/testag-subnet-1",
            "name": "testag-subnet-1",
            "resource_group_name": "applicaiton-gateway-testag",
            "virtual_network_name": "testag-network"
          },
          "dependencies": [
            "azurerm_resource_group.testag",
            "azurerm_virtual_network.testag"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "testag-subnet-2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.2.0/24",
            "id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/virtualNetworks/testag-network/subnets/testag-subnet-2",
            "name": "testag-subnet-2",
            "resource_group_name": "applicaiton-gateway-testag",
            "virtual_network_name": "testag-network"
          },
          "dependencies": [
            "azurerm_resource_group.testag",
            "azurerm_virtual_network.testag"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "testag",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/virtualNetworks/testag-network",
            "location": "westeurope",
            "name": "testag-network",
            "resource_group_name": "applicaiton-gateway-testag",
            "subnet": [
              {
                "address_prefix": "192.168.1.0/24",
                "id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/virtualNetworks/testag-network/subnets/testag-subnet-1",
                "name": "testag-subnet-1"
              },
              {
                "address_prefix": "192.168.2.0/24",
                "id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/virtualNetworks/testag-network/subnets/testag-subnet-2",
                "name": "testag-subnet-2"
              },
              {
                "address_prefix": "192.168.3.0/24",
                "id": "/subscriptions/53e27966-3c0c-4161-9b47-3df43eabc630/resourceGroups/applicaiton-gateway-testag/providers/Microsoft.Network/virtualNetworks/testag-network/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.testag"
          ]
        }
      ]
    }
  ]
}